--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,4 @@ jobs:
       - run: npm run lint
       - run: npm run test
       - run: npm run build
+      - run: ./scripts/check-oas-updated.sh
