--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: backend/package-lock.json
       - run: npm install
+      - run: npm run db:generate-client
       - run: npm run lint
       - run: npm run test
       - run: npm run build
