--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "db:generate-client": "prisma generate",
     "db:init": "prisma db push --force-reset",
     "openapi:export": "ts-node scripts/export-oas.ts"
