--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:generate-client": "prisma generate",
+    "db:init": "prisma db push --force-reset",
     "openapi:export": "ts-node scripts/export-oas.ts"
   },
   "dependencies": {
