--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,11 @@
   "shutdownAction": "none",
   "customizations": {
     "vscode": {
-      "extensions": ["Prisma.prisma"]
+      "extensions": ["Prisma.prisma", "esbenp.prettier-vscode"],
+      "settings": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+      }
     }
   }
 }
