DBのseedデータを作成

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "db:generate-client": "prisma generate",
     "db:init": "prisma db push --force-reset",
+    "db:seed": "prisma db seed",
     "openapi:export": "ts-node scripts/export-oas.ts"
   },
   "dependencies": {
@@ -73,5 +74,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
