--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,28 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+  infra:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    defaults:
+      run:
+        working-directory: infra
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ap-northeast-1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
+          cache-dependency-path: infra/package-lock.json
+      - run: npm install
+      - run: npm test
+      - if: contains(github.event_name, 'pull_request')
+        run: npm run cdk synth
+      - if: contains(github.event_name, 'push')
+        run: npm run cdk deploy -- --require-approval never
