--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,4 +81,4 @@ jobs:
       - if: contains(github.event_name, 'pull_request')
         run: npm run cdk synth
       - if: contains(github.event_name, 'pull_request')
-        run: npm run cdk deploy -- --require-approval never
+        run: npm run cdk deploy -- --require-approval never --all
