--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,7 @@
     "ghcr.io/devcontainers/features/docker-in-docker:1": {
       "version": "latest",
       "moby": true
-    }
+    },
+    "ghcr.io/devcontainers/features/aws-cli:1": {}
   }
 }
